# ai-pre-commit

./: README.md  ai_pre_commit.py  example.py  hook_example.ps1  hook_example.sh  install.ps1  install.sh  module_example.py  pre-commit-hooks.yaml  requirements.txt  setup.cfg  setup.py  test.py
