[metadata]
name = ai-pre-commit
version = 0.1.0
description = A pre-commit hook that uses OpenAI to check for obvious errors in your code
long_description = file: README.md
long_description_content_type = text/markdown
author = AI Pre-Commit Team
author_email = example@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    openai>=1.0.0
    colorama>=0.4.4

[options.entry_points]
console_scripts =
    ai-pre-commit = ai_pre_commit:main
